--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -679,8 +679,7 @@
       "lastP": "Last page",
       "openIA": "Open on Internet Archive",
       "redirecting": "Redirecting...",
-      "openW":"Open Work",
-      "find":"Find in dictionary"
+      "openW":"Open Work"
    },
    "mirador": {
       "return": "return to BUDA",
@@ -797,6 +796,7 @@
       "fairUseIA3": "To return to the record for this text, please use the \"back\" button",
       "fillColorTooltip": "Choose fill color",
       "filterObjects": "Filter objects",
+      "find":"Lookup in Monlam dictionary",
       "freehandTooltip": "Freeform annotation",
       "full":"Full",
       "fullScreen": "Full Screen",
@@ -826,6 +826,7 @@
       "manifest": "IIIF Manifest",
       "metadataTooltip": "View information/metadata about this object",
       "mirrorTooltip": "Mirror image",
+      "monlam":"Monlam dictionary",
       "more": "more",
       "mustLogin":"You must be logged in to download PDFs or image files.",
       "myManifests": "My Manifests",
