--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -832,6 +832,7 @@
       "mustLogin":"You must be logged in to download PDFs or image files.",
       "myManifests": "My Manifests",
       "newObject": "Replace Object",
+      "new":"new!",
       "no": "No",
       "noIndex": "No index available",
       "noLabel": "No Label",
