--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -803,6 +803,7 @@
       "monlam":"Monlam dictionary",
       "more": "restants",
       "myManifests": "Mes objets",
+      "new": "NOUVEAU!",
       "newObject": "Nouvel objet",
       "no": "Non",
       "noIndex": "Aucun index disponible",
