--- a/src/translations/km.json
+++ b/src/translations/km.json
@@ -814,6 +814,7 @@
       "more": "more",
       "mustLogin":"You must be logged in to download PDFs or image files.",
       "myManifests": "My Manifests",
+      "new": "ថ្មី!",
       "newObject": "Replace Object",
       "no": "No",
       "noIndex": "No index available",
