--- a/src/translations/zh.json
+++ b/src/translations/zh.json
@@ -777,6 +777,7 @@
       "metadataTooltip": "查看这个物件的信息/元数据",
       "more": "更多",
       "mustLogin":"You must be logged in to download PDFs or ZIPs.",
+      "new": "NEW!",
       "newObject": "建立新的物件",
       "no": "否",
       "objectMetadata": "物件元数据",
