--- a/src/translations/bo.json
+++ b/src/translations/bo.json
@@ -729,6 +729,7 @@
       "images": "བཤེར་པར།",
       "monlam":"Monlam dictionary",
       "mustLogin":"ཁྱེད་ཀྱིས་PDFsདང་ZIPsགང་རུང་ཕབ་ལེན་བྱེད་པར་ཐོག་མར་ནང་འཛུལ་བྱོས།",
+      "new": "གསར་པ།!",
       "or":"or",
       "pdferror1":"Incorrect image range",
       "pdferror2":"Server error",    
