--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -801,6 +801,7 @@
       "metadataTooltip": "Afficher les informations/métadonnées",
       "mirrorTooltip": "Retourner l'image (axe horizontal)",
       "monlam":"Monlam dictionary",
+      "monlamTitle":"Definitions from the Monlam Great Dictionary",
       "more": "restants",
       "myManifests": "Mes objets",
       "new": "NOUVEAU!",
