--- a/src/translations/zh.json
+++ b/src/translations/zh.json
@@ -774,6 +774,7 @@
       "load": "载入",
       "logo": "徽标",
       "monlam":"Monlam dictionary",
+      "monlamTitle":"Definitions from the Monlam Great Dictionary",
       "metadataTooltip": "查看这个物件的信息/元数据",
       "more": "更多",
       "mustLogin":"You must be logged in to download PDFs or ZIPs.",
