--- a/src/translations/bo.json
+++ b/src/translations/bo.json
@@ -728,6 +728,7 @@
       "image": "བཤེར་པར།",
       "images": "བཤེར་པར།",
       "monlam":"Monlam dictionary",
+      "monlamTitle":"Definitions from the Monlam Great Dictionary",
       "mustLogin":"ཁྱེད་ཀྱིས་PDFsདང་ZIPsགང་རུང་ཕབ་ལེན་བྱེད་པར་ཐོག་མར་ནང་འཛུལ་བྱོས།",
       "new": "གསར་པ།!",
       "or":"or",
