fix spelling + dictionary on when opening viewer

--- a/src/translations/bo.json
+++ b/src/translations/bo.json
@@ -717,7 +717,7 @@
       "fairUseIA1": "Access this work on Internet Archive",
       "fairUseIA2": "View first/last 20 pages on BDRC",
       "fairUseIA3": "To return to the record for this text, please use the \"back\" button",
-      "find":"Lookup in Monlam dictionary",
+      "find":"Look up in Monlam Dictionary",
       "full":"Full",
       "getPDF":"Get PDF",
       "getRAW":"Download original file for this image",
@@ -727,8 +727,8 @@
       "goto":"ཤོག་ངོས་སྟོན།",
       "image": "བཤེར་པར།",
       "images": "བཤེར་པར།",
-      "monlam":"Monlam dictionary",
-      "monlamTitle":"Definitions from the Monlam Great Dictionary",
+      "monlam":"Monlam Dictionary",
+      "monlamTitle":"Definitions from the Monlam Grand Dictionary",
       "mustLogin":"ཁྱེད་ཀྱིས་PDFsདང་ZIPsགང་རུང་ཕབ་ལེན་བྱེད་པར་ཐོག་མར་ནང་འཛུལ་བྱོས།",
       "new": "གསར་པ།!",
       "or":"or",
