--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -774,7 +774,7 @@
       "emptyTemplateMessage": "Il n'y a pas de calques d'image sur ce canevas",
       "fillColorTooltip": "Choisir une couleur de remplissage",
       "filterObjects": "Filtrer la liste",
-      "find":"Lookup in Monlam dictionary",
+      "find":"Look up in Monlam Dictionary",
       "freehandTooltip": "Tracé libre",
       "fullScreen": "Plein écran",
       "fullScreenTooltip": "Ouvrir en plein écran",
@@ -800,8 +800,8 @@
       "manifest": "Manifest IIIF",
       "metadataTooltip": "Afficher les informations/métadonnées",
       "mirrorTooltip": "Retourner l'image (axe horizontal)",
-      "monlam":"Monlam dictionary",
-      "monlamTitle":"Definitions from the Monlam Great Dictionary",
+      "monlam":"Monlam Dictionary",
+      "monlamTitle":"Definitions from the Monlam Grand Dictionary",
       "more": "restants",
       "myManifests": "Mes objets",
       "new": "NOUVEAU!",
