--- a/src/translations/km.json
+++ b/src/translations/km.json
@@ -781,7 +781,7 @@
       "fairUseIA3": "To return to the record for this text, please use the \"back\" button",
       "fillColorTooltip": "Choose fill color",
       "filterObjects": "Filter objects",
-      "find":"Lookup in Monlam dictionary",
+      "find":"Look up in Monlam Dictionary",
       "freehandTooltip": "Freeform annotation",
       "full":"Full",
       "fullScreen": "Full Screen",
@@ -810,8 +810,8 @@
       "manifest": "IIIF Manifest",
       "metadataTooltip": "View information/metadata about this object",
       "mirrorTooltip": "Mirror image",
-      "monlam":"Monlam dictionary",
-      "monlamTitle":"Definitions from the Monlam Great Dictionary",
+      "monlam":"Monlam Dictionary",
+      "monlamTitle":"Definitions from the Monlam Grand Dictionary",
       "more": "more",
       "mustLogin":"You must be logged in to download PDFs or image files.",
       "myManifests": "My Manifests",
