--- a/src/translations/zh.json
+++ b/src/translations/zh.json
@@ -753,7 +753,7 @@
       "fairUseIA3": "To return to the record for this text, please use the \"back\" button",
       "fillColorTooltip": "选择填充颜色",
       "filterObjects": "过滤物件",
-      "find":"Lookup in Monlam dictionary",
+      "find":"Look up in Monlam Dictionary",
       "freehandTooltip": "自由注释",
       "full":"Full",
       "fullScreen": "全屏",
@@ -773,8 +773,8 @@
       "links": "链接",
       "load": "载入",
       "logo": "徽标",
-      "monlam":"Monlam dictionary",
-      "monlamTitle":"Definitions from the Monlam Great Dictionary",
+      "monlam":"Monlam Dictionary",
+      "monlamTitle":"Definitions from the Monlam Grand Dictionary",
       "metadataTooltip": "查看这个物件的信息/元数据",
       "more": "更多",
       "mustLogin":"You must be logged in to download PDFs or ZIPs.",
