add 'Quality' facet on etext results page (#800)

--- a/src/translations/bo.json
+++ b/src/translations/bo.json
@@ -271,7 +271,8 @@
       "tmp:inDLD":"སྟབས་བདེའི་དཔེ་མཛོད་ནང་ཐོབ།",
       "tmp:available":"སྟབས་བདེའི་དཔེ་མཛོད་ནང་ཐོབ།",
       "tmp:nbMembers":"Members",
-      "tmp:nbParts":"Parts"
+      "tmp:nbParts":"Parts",
+      "tmp:quality":"Quality"
    },
    "result": {
       "open": "ཁ་ཕྱེ།",
