--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -272,7 +272,8 @@
       "tmp:inDLD":"Availability on DLD",
       "tmp:available":"Available",
       "tmp:nbMembers":"Members",
-      "tmp:nbParts":"Parts"
+      "tmp:nbParts":"Parts",
+      "tmp:quality":"Quality"
    },
    "guided":{
       "keyword":"keyword",
