--- a/src/translations/zh.json
+++ b/src/translations/zh.json
@@ -271,7 +271,8 @@
       "tmp:inDLD":"Availability on DLD",
       "tmp:available":"Available",
       "tmp:nbMembers":"Members",
-      "tmp:nbParts":"Parts"
+      "tmp:nbParts":"Parts",
+      "tmp:quality":"Quality"
    },
    "result": {
       "open": "开放",
