add sort by quality on etext results page (#800)

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -164,7 +164,8 @@
       "exact":"Partial or exact match",
       "exactM":"Exact match only",
       "exactF":"Exact full match only",
-      "exactMF":"Any exact match"
+      "exactMF":"Any exact match",
+      "quality":"OCR Quality"
    },
    "copyright": {
       "open": "Open Access",
