--- a/src/translations/km.json
+++ b/src/translations/km.json
@@ -164,7 +164,7 @@
       "exactM":"exact match only",
       "exactF":"exact full match only",
       "exactMF":"any exact match",
-      "quality":"Quality"
+      "quality":"OCR Quality"
    },
    "copyright": {
       "open": "បើកការចូលប្រើប្រាស់",
@@ -270,7 +270,7 @@
       "tmp:available":"Available",
       "tmp:nbMembers":"Members",
       "tmp:nbParts":"Parts",
-      "tmp:quality":"Quality"
+      "tmp:quality":"OCR Quality"
    },
    "guided":{
       "keyword":"keyword",
