--- a/src/translations/zh.json
+++ b/src/translations/zh.json
@@ -164,7 +164,7 @@
       "exactM":"exact match only",
       "exactF":"exact full match only",
       "exactMF":"any exact match",
-      "quality":"Quality"
+      "quality":"OCR Quality"
    },
    "copyright": {
       "open": "开放访问",
@@ -273,7 +273,7 @@
       "tmp:available":"Available",
       "tmp:nbMembers":"Members",
       "tmp:nbParts":"Parts",
-      "tmp:quality":"Quality"
+      "tmp:quality":"OCR Quality"
    },
    "result": {
       "open": "开放",
