add link to guide in topbar

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -110,7 +110,8 @@
       "browse":"browse",
       "home":"home",
       "collections":"Browse collections subscribed to by your institution",
-      "update":"Update to latest version of BUDA"
+      "update":"Update to latest version of BUDA",
+      "guide":"user guide"
    },
    "Lsidebar": {
       "sortBy": {
