revert transifex auto update

--- a/src/translations/bo.json
+++ b/src/translations/bo.json
@@ -50,7 +50,7 @@
             "text":"<parag>Relevant bibliographies and secondary sources concerning Cambodian manuscripts <nbsp>—coming soon</nbsp>. </parag>"
          }
       },
-      "help":"<bold>Please consult the <lk href='/static/user-guide/index'>user guide</lk> and <lk href='https://www.bdrc.io/buda-user-guide/frequently-asked-questions/'>FAQ</lk> to learn more about BUDA</bold>",
+      "help":"<bold>བུདྡྷ་དཔེ་མཛོད་ཀྱི་སྐོར་ལ་ཤེས་རྟོགས་ཆེད་<lk href='/static/user-guide/index'>བཀོལ་སྤྱོད་ལམ་སྟོན་</lk> དང་ <lk href='https://www.bdrc.io/buda-user-guide/frequently-asked-questions/'>དོགས་གཅོད་དྲི་བ་ཁག་ལ་</lk> གཟིགས།</bold>\n\n",
       "all-collections":"ཕྱོགས་བསྒྲིགས་ཆ་ཚང་།",
       "female-authors":"བུད་མེད་རྩོམ་པ་བོ།",
       "works-by-female-authors":"བུད་མེད་རྩོམ་པ་བོའི་བརྩམས་ཆོས་ཁག",
