--- a/src/translations/bo.json
+++ b/src/translations/bo.json
@@ -837,6 +837,9 @@
       "mirrorTooltip": "Mirror image",
       "monlam":"སྨོན་ལམ་ཚིག་མཛོད།",
       "monlamTitle":"སྨོན་ལམ་ཚིག་མཛོད་ནང་གི་ཚིག་འགྲེལ།",
+      "monlamExact":"Exact matches of the context ({{count,counttobo}})",
+      "monlamContain":"Entries containing the highlighted text ({{count,counttobo}})",
+      "monlamDef":"Definitions containing the highlighted word ({{count,counttobo}})",
       "more": "འདི་ལས་མང་བ་",
       "mustLogin":"ཁྱེད་ཀྱིས་PDFs དང་ཡང་ན་བཤེར་པར་གང་ཞིག་ཕབ་ལེན་བྱེད་རུང་ཐོག་མར་ངེས་པར་དུ་ནང་འཛུལ་བྱ་དགོས། ",
       "myManifests": "My Manifests",
