--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -837,6 +837,9 @@
       "mirrorTooltip": "Mirror image",
       "monlam":"Monlam Dictionary",
       "monlamTitle":"Definitions from the Monlam Grand Dictionary",
+      "monlamExact":"Exact matches of the context ({{count}})",
+      "monlamContain":"Entries containing the highlighted text ({{count}})",
+      "monlamDef":"Definitions containing the highlighted word ({{count}})",
       "more": "more",
       "mustLogin":"You must be logged in to download PDFs or image files.",
       "myManifests": "My Manifests",
