related to #828 + WIP: #827

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -278,7 +278,8 @@
       "tmp:quality":"OCR Accuracy",
       "tmp:RawOCR": "average",
       "tmp:CleanedOCR": "high",
-      "tmp:ComputerInputOCR": "very high"
+      "tmp:ComputerInputOCR": "very high",
+      "tmp:subscribed":"Subscribed Collections"
    },
    "guided":{
       "keyword":"keyword",
