--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -689,7 +689,8 @@
       "openIA": "Open on Internet Archive",
       "redirecting": "Redirecting...",
       "openW":"Open Work",
-      "fullR":"Full record"
+      "fullR":"Full record",
+      "notInList":"This PDF is not part of a collection subscribed to by your institution.<nl/>Please <lk>visit the BDRC platform</lk> and log in for access."
    },
    "mirador": {
       "return": "return to BUDA",
