upgrade mirador + attempt to remove lg&donation popups (#829)

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -850,6 +850,8 @@
       "no": "No",
       "noIndex": "No index available",
       "noLabel": "No Label",
+      "notInList1":"This PDF is not part of a collection subscribed to by your institution. {{lnk}} and log in for access.",
+      "notInList2":"Visit the BDRC platform",
       "objectMetadata": "Object Metadata",
       "opacityLabel": "opacity",
       "or":"or",
