--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -54,7 +54,8 @@
       "all-collections":"All collections",
       "female-authors":"Female authors",
       "works-by-female-authors":"Works by female authors",
-      "instances-by-female-authors":"Versions by female authors"
+      "instances-by-female-authors":"Versions by female authors",
+      "collec":"<h>BDRC offers a digital acquisition program for research libraries, with a total of 17 Core Text Collections (CTCs), now with an updated interface for convenient searching and browsing.</h><h><bold>The most recent, CTC 17, was released in 2020 and contains 214 scanned collections, for a total of 1185 volumes, representing 757,567 images.</bold></h><h>Please ask your institution’s librarian about subscribing to CTC 17 and earlier editions.<nl/>For more information and assistance, email <lk href='mailto:dechen@bdrc.io'>dechen@bdrc.io</lk>.</h>"
 
    },
    "types": {
