--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -450,7 +450,9 @@
       "tilt1":"Please rotate your device",
       "tilt2":"This content is optimised for landscape mode",
       "DLD":"This text is not available on your DLD.\nWould you like to open it online instead?",
-      "expand":"Expand"
+      "expand":"Expand",
+      "otherR":"Other resource",
+      "otherR_plural":"Other resources"
    },
    "lang": {
       "en": "English",
