--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -693,7 +693,8 @@
       "redirecting": "Redirecting...",
       "openW":"Open Work",
       "fullR":"Full record",
-      "notInList":"This PDF is not part of a collection subscribed to by your institution.<nl/>Please <lk>visit the BDRC platform</lk> and log in for access."
+      "notInList":"This PDF is not part of a collection subscribed to by your institution.<nl/>Please <lk>visit the BDRC platform</lk> and log in for access.",
+      "continue":"Continue reading"
    },
    "mirador": {
       "return": "return to BUDA",
