--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -33,7 +33,7 @@
       "search": "Search",
       "choose": "Choose language",
       "start": "Start typing then select search language",
-      "new": "New Scans Released This Week",
+      "new": "New Scans Released",
       "khmer":{
          "title":"Khmer<newline/>Manuscript<newline/>Heritage Project",
          "subtitle":"Explore Cambodia's traditional literature.",
