add subpage routing + breadcrumbs (#876)

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -728,7 +728,31 @@
       "contemporary":"Contemporary Places",
       "monasteries":"Monasteries by School",
       "printeries":"Printeries",
-      "century":"By Century"
+      "century":"By Century",
+      "id_topic":"By Topic",
+      "id_author":"By Author",
+      "id_collection":"By Collection",
+      "t_persons":"Persons",
+      "t_places":"Places",
+      "t_texts":"Texts",
+      "natural-features":"Natural Features",
+      "sites":"Sites",
+      "regions":"Regions",
+      "contemporary-places":"Contemporary Places",
+      "8th":"8th Century",
+      "9th":"9th Century",
+      "10th":"10th Century",
+      "11th":"11th Century",
+      "12th":"12th Century",
+      "13th":"13th Century",
+      "14th":"14th Century",
+      "15th":"15th Century",
+      "16th":"16th Century",
+      "17th":"17th Century",
+      "18th":"18th Century",
+      "19th":"19th Century",
+      "20th":"20th Century",
+      "21st":"21st Century"
    },
    "mirador": {
       "return": "return to BUDA",
