--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -4,7 +4,8 @@
       "colon": ":",
       "num": "{{num}}",
       "lpar": "(",
-      "rpar": ")"
+      "rpar": ")",
+      "semic": "; "
    },
    "cookies":{
       "message":"This website uses a third party cookie to collect anonymous usage statistics and enhance the user experience (Google Analytics).",
