--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -356,7 +356,8 @@
       "userP": "User Profile",
       "personalI": "Personal Information",
       "relatedM": "Collection members of {{resLabel.value}}",
-      "relatedS": "Serial members of {{resLabel.value}}"
+      "relatedS": "Serial members of {{resLabel.value}}",
+      "openViewerFU": "Open Preview on BDRC"
    },
    "user": {
       "photo": {
@@ -704,7 +705,8 @@
       "notInList":"This PDF is not part of a collection subscribed to by your institution.<nl/>Please <lk>visit the BDRC platform</lk> and log in for access.",
       "continue":"Continue reading",
       "seeIn":"See this text in {{- txt}}",
-      "closeO":"Close outline"
+      "closeO":"Close outline",
+      "downloadFU": "Download Preview"
    },
    "tradition":{
       "boT":"Tibetan Tradition",
