--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -289,7 +289,8 @@
       "tmp:etext_access":"Etext Access",
       "tmp:scans_quality":"Scans Quality",
       "tmp:etext_quality":"Etext Quality",
-      "tmp:placeType":"Place Type"
+      "tmp:placeType":"Place Type",
+      "tmp:etext_search":"Etext"
    },
    "guided":{
       "keyword":"keyword",
@@ -586,7 +587,10 @@
       "hidden":"Some results were hidden because they currently are not released.",
       "showU":"Show non-released items",
       "toggleM": "Toggle Map",
-      "kw":"(Search any)"
+      "kw":"(Search any)",
+      "etext_search":{
+         "true":"Search in Etexts only"
+      }
    },
    "Rsidebar": {
       "title": "Display Preferences",
