first draft for results page header (#902)

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -341,7 +341,8 @@
       "bDate":"b. {{num}}",
       "bDateCentury":"b. {{num}}",
       "dDate":"d. {{num}}",
-      "fDate":"fl. {{num}}"
+      "fDate":"fl. {{num}}",
+      "assocNoT": "Associated with: <res to='/show/{{- rid}}'>{{- name}}<\/res>"
    },
    "map": {
       "touch": "Use two fingers to move the map",
