--- a/src/translations/bo.json
+++ b/src/translations/bo.json
@@ -845,7 +845,7 @@
       "monlamDef":"མཚན་ཉིད་ནང་ནན་རྟགས་བཀོད་པའི་ཚིག་ ({{count}}) འདུག",
       "more": "འདི་ལས་མང་བ་",
       "mustLogin":"ཁྱེད་ཀྱིས་PDFs དང་ཡང་ན་བཤེར་པར་གང་ཞིག་ཕབ་ལེན་བྱེད་རུང་ཐོག་མར་ངེས་པར་དུ་ནང་འཛུལ་བྱ་དགོས། ",
-      "mustLoginFeedback":"བསམ་འཆར་འབུལ་སྤྲོད་ཀྱི་ལག་ཆ་བཀོལ་སྤྱོད་བྱེད་པ་ངེས་པར་དུ་ནང་འཛུལ་བྱོས།",
+      "mustLoginFeedback" :"བསམ་འཆར་འབུལ་སྤྲོད་ཀྱི་ལག་ཆ་བཀོལ་སྤྱོད་བྱེད་པར་ཐོག་མར་ནང་འཛུལ་བྱ་དགོས།",
       "myManifests": "My Manifests",
       "newObject": "དཔེ་ཆ་བསྐྱར་བརྗེ་བྱེད།",
       "new":"གསར་པ།",
