--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -113,7 +113,8 @@
       "collections":"Browse collections subscribed to by your institution",
       "update":"Update to latest version of BUDA",
       "guide":"user guide",
-      "feedback":"Feedback"
+      "feedback":"Feedback",
+      "resultsNoKW": "Search results"
    },
    "Lsidebar": {
       "sortBy": {
