--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -114,7 +114,8 @@
       "update":"Update to latest version of BUDA",
       "guide":"user guide",
       "feedback":"Feedback",
-      "resultsNoKW": "Search results"
+      "resultsNoKW": "Search results",
+      "preserving":"Preserving Buddhist literature for the world"
    },
    "Lsidebar": {
       "sortBy": {
